tests/snapshots/tests__arg_group__args.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag='true'
claptrap_color='false'
