tests/snapshots/tests__arg_group__conflicts_with.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_224b398c'
[1m[31merror:[0m the argument '[33m-c[0m' cannot be used with '[33m-d[0m'

[1m[4mUsage:[0m [1mmyprog[0m [1m-c[0m

For more information, try '[1m--help[0m'.
EOF_224b398c
exit 1
