tests/snapshots/tests__arg_group__required.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_fdfd176b'
[1m[31merror:[0m the following required arguments were not provided:
  [32m<-f|-c>[0m

[1m[4mUsage:[0m [1mmyprog[0m <-f|-c>

For more information, try '[1m--help[0m'.
EOF_fdfd176b
exit 1
